# discoopt

./: .env.example  README.md  pyproject.toml
docs/theoretical_analysis/: precon_illustration.ipynb
examples/: compressed_sensing.ipynb  group_lasso.ipynb  multi_node.ipynb  multi_node_cs.ipynb  multi_node_rr.ipynb  ridge_regression.ipynb  source_localization.ipynb
examples/notebooks/: compressed_sensing.ipynb  ridge_regression.ipynb  source_localization.ipynb
examples/scripts/ridge_regression/: node.py
examples/scripts/source_localization/: node.py
src/dco/: _network.py  autodiff.py  optimizer.py  regularizer.py
src/discoopt/: __init__.py  _autodiff.py  _network.py  loss_function.py  optimizer.py  regularizer.py
