[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.10"
name = "discoopt"
version = "0.1.0"
description = "Distributed Composite Optimization"
authors = [
    { name = "Rui Huang", email = "R.Huang@lboro.ac.uk" },
    { name = "Changxin Liu", email = "chxliu@outlook.com" },
]

dependencies = [
    "jax>=0.5.3",
    "topolink @ git+https://github.com/rui-huang-opt/topolink.git@0.2.2",
]

[project.optional-dependencies]
exp = ["cvxpy[ECOS]>=1.6.3", "matplotlib>=3.10.3"]
autograd = ["autograd>=1.7.0"]
vsc = ["ipykernel>=6.29.5"]

[tool.setuptools.packages.find]
where = ["src"]
